# ESP_MASTER

./: .gitmodules  LICENSE  README.md
3D/: esp32-key v5.stl  前壳 .stl  后壳.stl
Hardware/: KS_ESP32_CAM.xlsx
Software/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  spiffsgen.py  需要取模的字.txt
Software/LvglFontTool/: config.ini
Software/components/: component_conf.mk
Software/components/adc/: CMakeLists.txt  bsp_adc.c  bsp_adc.h
Software/components/esp-face/: CMakeLists.txt  Kconfig
Software/components/esp-sr/: CMakeLists.txt
Software/components/fb_gfx/: fb_gfx.c
Software/components/font/: CMakeLists.txt  myFont.c  number.h  number_temp.h  snow16.c
Software/components/http/: CMakeLists.txt  http.c  http.h
Software/components/image/: img2048.c  imgabout.c  imgcalendar.c  imgcam.c  imgcloud.c  imgcolor.c  imgface.c  imgheart.c  imgimu.c  imgset.c  imgsnake.c  kevincoooool.c  myimg.c  myimg.h  taikong001.c  (+36 more)
Software/components/lvgl_esp32_drivers/lvgl_tft/: CMakeLists.txt  disp_driver.c  disp_driver.h  st7789.c
Software/main/: CMakeLists.txt  EspAudioAlloc.c  app_camera.c  app_camera.h  app_face.c  app_face.h  app_httpd.c  app_httpd.h  app_main.c  app_main.h  app_speech_recsrc.c  app_speech_srcif.h  app_speech_wakeup.c  app_wifi.c  app_wifi.h  component.mk  irTask.c  irTask.h  mynvs.c  mynvs.h  qr_recoginize.c  qr_recoginize.h
Software/pic/: airkiss.c  img_music.c  imgbg.c  imgcloud.c  imgfft.c  imgmusic.c  imgspectrum.c
Software/spiffs/: ksdiy.html  main.html  mqtt.txt  set.html
(+142 files in other folders)
